tdf#117843 DOCX import: disable compat increased spacing in header/footer

It's only relevant for the body text.

(cherry picked from commit 09a37fe50f36ced755bc326fb6b4c1b6fdf61f86)

Reviewed-on: https://gerrit.libreoffice.org/55335
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit eb65a8c54f56abc8ba66f9cbc779cd20e4740933)

Change-Id: Id894604ed9b2c19400eeabbd2966f104d8b34aab
Reviewed-on: https://gerrit.libreoffice.org/56053
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit 6dcf475d5cda984ce0d1035e36267cedc3019e50)